--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,15 +10,15 @@ main:
   # - name: Posts
   #   url: '#posts'
   #   weight: 20
-  - name: Research
+  - name: Research projects
     url: '#projects'
-    weight: 30
+    weight: 50
   - name: Publications
     url: '#publications'
     weight: 40
   - name: CV
     url: '#experience'
-    weight: 50
+    weight: 40
   - name: Contact
     url: '#contact'
     weight: 60
