--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,9 +16,9 @@ main:
   - name: Publications
     url: '#publications'
     weight: 40
-  - name: CV
+  - name: Experience
     url: '#experience'
-    weight: 40
+    weight: 30
   - name: Contact
     url: '#contact'
     weight: 60
