--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -143,7 +143,7 @@ map:
   api_key: ''
   zoom: 15
 marketing:
-  google_analytics: ''
+  google_analytics: 'G-GPVJWK954Y'
   google_tag_manager: ''
   google_site_verification: ''
   baidu_site_verification: ''
